Feat: add exceptions, mappers